fixing jumps, working on places

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: var(--text-color__bright);
 }
 .cover__link:hover {
   background: rgba(42, 44, 47, 0.8);
