--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,9 +8,9 @@
   line-height: 1.04em;
   max-width: 720px;
 }
-@media (max-width: 320px) {
+@media (max-width: 732px) {
   .lead__title {
-    max-width: 288px;
+    max-width: 100%;
     padding: 0 0 16px;
     font-size: 2.5rem;
     line-height: 1.1em;
