--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -5,10 +5,3 @@
   grid-area: image;
   aspect-ratio: 1/1;
 }
-
-@media (max-width: 320px) {
-  .places__image {
-    margin-left: -16px;
-    max-width: 320px;
-  }
-}
