--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -22,7 +22,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 600px) {
   .places__paragraph {
     font-size: 16px;
     max-width: 288px;
