--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -24,7 +24,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 600px) {
   .places__title {
     padding-bottom: 32px;
     max-width: 288px;
